--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.8.2",
     "react-toastify": "^9.1.1",
+    "swiper": "^9.3.2",
     "uuid": "^9.0.0",
     "vite-plugin-svgr": "^2.4.0"
   },
